fix: remove get(0) and get(1) when possible